terminamos la practica

--- a/Index.html
+++ b/Index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- CSS, Font, Iconos -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS, Font, Iconos -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/miscreaciones.css">
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">">
-     <title>1 - Inicio - Git</title>
+    <title>1 - Git - Inicio 🥱</title>
 </head>
 <body>
-  <div>
-    <div class="contenedor">
-      <div class="encabezado">
-        <span class="titulo">
-            Titulo de mi Pagina 
-        </span>
+  <div class="contenedor">
+    <div class="encabezado">
+      <span class = "titulo">
+        Titulo de mi Página
+      </span>
     </div>
     <div class="informacion">
-        <div class="articulos">
-            <div class="nota">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-            </div>
-            <div class="nota">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-                </div>
-                <div class="nota">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-                    </div>
-                    <div class="nota">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-                        </div>
-                        <div class="nota">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-                            </div>
-                            <div class="nota">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit illum excepturi veritatis, unde beatae est fugit laudantium provident tenetur amet eos corrupti. Quasi minima sint illo molestiae. Harum, eum totam.
-                                </div>
+      <div class="articulos">
+        <div class="nota">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        <div class="nota">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        <div class="nota">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        <div class="nota">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        <div class="nota">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        <div class="nota" id="ultima">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, atque cum. Tempora molestias, vero cum voluptas obcaecati quae, fugit, praesentium soluta hic libero eligendi fugiat est assumenda? Accusamus itaque inventore quasi eum eligendi soluta numquam, accusantium facere similique tempora explicabo.
+        </div>
+        </div>
+        <div class="menu">
+          <a href="http://www.facebook.com" class="btnvinculo">Vinculo1</a>
+          <a href="#ultima" class="btnvinculo">Vinculo2</a>
+          <a href="#" class="btnvinculo">Vinculo3</a>
+          <a href="#" class="btnvinculo">Vinculo4</a>
+          <a href="#" class="btnvinculo">Vinculo5</a>
+
+          <input type="number" id="num1">
+          <input type="number" id="num2">
+          <button id="btnSuma" class="btnvinculo">Suma</button>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="menu">
-        <a href="#" class="btnVinculo">Vinculo 1</a>
-        <a href="#" class="btnVinculo">Vinculo 2</a>
-        <a href="#" class="btnVinculo">Vinculo 3</a>
-        <a href="#" class="btnVinculo">Vinculo 4</a>
-        <a href="#" class="btnVinculo">Vinculo 5</a>
-  </div>
-  </div>
-<!-- Acceso a JS -->
+  <!-- Acceso a JS -->
+  <script src="./js/index.js"></script>    
 </body>
 </html>
